--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,30 @@
 {
     "name": "ixudra/validation",
-    "description": "",
+    "description": "Custom Laravel 4 validation library - developer by Ixudra",
+    "version": "0.1.0",
+    "keywords": ["Ixudra", "Laravel", "Validation"],
+    "homepage": "http://ixudra.be",
+    "license": "MIT",
+
     "authors": [
         {
             "name": "Jan Oris",
             "email": "jan.oris@ixudra.be"
         }
     ],
+
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.1.*",
         "illuminate/translation": "4.1.*",
         "illuminate/validation": "4.1.*"
     },
+
     "require-dev": {
         "phpunit/phpunit" : "4.0.*",
         "mockery/mockery": "dev-master@dev"
     },
+
     "autoload": {
         "classmap": [
             "src/migrations"
@@ -25,5 +33,6 @@
             "Ixudra\\Validation\\": "src/"
         }
     },
+
     "minimum-stability": "stable"
 }
