--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ixudra/validation",
     "description": "Custom Laravel 4 validation library - developer by Ixudra",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "keywords": ["Ixudra", "Laravel", "Validation"],
     "homepage": "http://ixudra.be",
     "license": "MIT",
@@ -15,9 +15,9 @@
 
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.1.*",
-        "illuminate/translation": "4.1.*",
-        "illuminate/validation": "4.1.*"
+        "illuminate/support": ">=4.1",
+        "illuminate/translation": ">=4.1",
+        "illuminate/validation": ">=4.1"
     },
 
     "require-dev": {
